2005-08-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc (rest_collision_callback): call position_beam() if
	necessary.

	* input/regression/spacing-uniform-stretching.ly: new file.

	* lily/spacing-loose-columns.cc (set_loose_columns): use robust_relative_extent().

	* Documentation/topdocs/NEWS.tely (Top): add Nicolas as
	contributor.

	* lily/include/ly-module.hh: define MODULE_GC_KLUDGE globally.

	* input/proportional.ly: new file.

	* lily/tuplet-bracket.cc (after_line_breaking): don't suicide if
	columns is empty

	* lily/tuplet-engraver.cc (finalize): new function. Reset right
	bounds to currentCommandColumn for the last step.
	(start_translation_timestep): if tupletFullLength is set, set
	bound to Paper Column

	* input/regression/tuplet-full-length.ly (indent): new file.

	* lily/spacing-loose-columns.cc (set_loose_columns): space a whole
	clique of loose columns, eg. a set of grace notes in strict
	notespacing.

	* input/regression/spacing-strict-spacing-grace.ly: new file.

	* lily/key-signature-interface.cc: change property name to
	alteration-alist

	* lily/key-engraver.cc (read_event): read keyAlterationOrder, not
	keyAccidentalOrder

	* python/convertrules.py (conv): keyAccidentalOrder ->
	keyAlterationOrder

	* lily/key-engraver.cc (create_key): always print a cancellation
	for going to C-major/A-minor, regardless of printKeyCancellation.
	(create_key): remove typecheck for visibility. This fixes key
	signature not being printed.

	* lily/spacing-determine-loose-columns.cc: new file.

	* input/regression/spacing-strict-notespacing.ly: new file.

	* lily/spacing-spanner.cc (generate_springs): rename from
	do_measure. 
	(generate_pair_spacing): new function.
	(init, generate_pair_spacing): set between-cols for floating
	nonmusical columns.

	* lily/spaceable-grob.cc (get_spring): new function. 

	* lily/tuplet-bracket.cc (print): on the left, the overshoot is
	relative to the right edge of the prefatory matter.
